k8s/authfoodorder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authfoodorderdpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authfoodorderdpl
  template:
    metadata:
      labels:
        app: authfoodorderdpl
    spec:
      containers:
      - name: authfoodorderdpl
        image: sachetwasti61/auth_service_food_ordering
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: authfoodsrv
spec:
  selector:
    app: authfoodorderdpl
  ports:
  - port: 8080
    targetPort: 8080
