k8s/authfoodorderdepl.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-food-order-srv
spec:
  selector:
    app: authfoodorder
  ports:
    - name: authfoodorder
      protocol: TCP
      port: 8080
      targetPort: 8080
