k8s/cloud-food-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-gateway-deployment
  template:
    metadata:
      labels:
        app: cloud-gateway-deployment
    spec:
      containers:
      - name: cloud-gateway-deployment
        image: sachetwasti61/cloud-gateway-food-deployment
        ports:
        - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-gateway-srv
spec:
  type: LoadBalancer
  selector:
    app: cloud-gateway-deployment
  ports:
  - name: cloud-gateway-deployment
    protocol: TCP
    port: 9090
    targetPort: 9090
