k8s/food-order-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector: #using this service is gonna find the pod that it is supposed to govern the request to
    app: food-order-client-dpl
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
