k8s/menu-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menudpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: menudpl
  template:
    metadata:
      labels:
        app: menudpl
    spec:
      containers:
        - name: menudpl
          image: sachetwasti61/menu
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: menusrv
spec:
  selector:
    app: menudpl
  ports:
    - port: 8081
      targetPort: 8081
