k8s/order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderdpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderdpl
  template:
    metadata:
      labels:
        app: orderdpl
    spec:
      containers:
        - name: menudpl
          image: sachetwasti61/orderfood
          ports:
            - containerPort: 8072
---
apiVersion: v1
kind: Service
metadata:
  name: ordersrv
spec:
  selector:
    app: orderdpl
  ports:
    - port: 8072
      targetPort: 8072
