k8s/paymentfood.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentdpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentdpl
  template:
    metadata:
      labels:
        app: paymentdpl
    spec:
      containers:
        - name: paymentdpl
          image: sachetwasti61/paymentfood
          ports:
            - containerPort: 8052
---
apiVersion: v1
kind: Service
metadata:
  name: paymentsrv
spec:
  selector:
    app: paymentdpl
  ports:
    - port: 8052
      targetPort: 8052
