k8s/paymentmongodpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-food-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-food-mongo-depl
  template:
    metadata:
      labels:
        app: payment-food-mongo-depl
    spec:
      containers:
        - name: payment-food-mongo-depl
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: payment-food-mongo-srv
spec:
  selector:
    app: payment-food-mongo-depl
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
