k8s/redis-exp-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis-container
          image: redis:alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: "1000m"
          volumeMounts:
            - mountPath: /redis-master-data
              name: data
            - mountPath: /redis-master
              name: redis-config
      volumes:
        - name: data
          emptyDir: {}
        - name: redis-config
          configMap:
            name: redis-config
---
apiVersion: v1
kind: Service
metadata:
  name: redis-srv
spec:
  selector:
    app: redis
  ports:
    - name: redisdpl
      protocol: TCP
      port: 6379
      targetPort: 6379
#need to enable redis notifications, inside redis-cli type:
#config set notify-keyspace-events KEA
#docker exec -it redisContainerId redis-cli
