k8s/ingress-srv-food.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: foodorder.dev
      http:
        paths:
          - path: /api/v1/?(.*)
            pathType: Prefix
            backend:
              service:
                name: cloud-gateway-srv
                port:
                  number: 9090
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
